--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
  <div id="main">
  <p><small><a href="index.html">Top</a></small></p>
  <p>私の趣味である、創作物を掲載するホームページです。</p>
+ <!-- ナビゲーション -->
  <h2>Navigation</h2>
  <nav id="navi">
   <ul>
