--- a/pictures.html
+++ b/pictures.html
@@ -14,13 +14,13 @@
   <h2>Picture</h2>
    <p>作った画像を紹介するページです。</p>
    <h3><li>好きと嫌いは紙一重</li></h3>
-    <img src="images/1.jpg">
+    <a href="images/1.jpg"><img src="images/1.jpg"></a>
     <p>私が一番最初に作ったものです。紙一重の「一」を、「好き」と「嫌い」の間に挟んだ事がこだわりです。</p>
    <h3><li>私は変えたくないもののために、変わった。</li></h3>
-    <img src="images/2.jpg">
+    <a href="images/2.jpg"><img src="images/2.jpg"></a>
     <p>好きなゲームの中で一番好きな言葉です。逆説的な表現を視覚的に表現するために、白と黒で分けてみました。真ん中にある花はフリー素材で、その言葉を発したキャラクターが「変わった」ことの1つに関連しています。</p>
    <h3><li>邪魔</li></h3>
-    <img src="images/3.jpg">
+    <a href="images/3.jpg"><img src="images/3.jpg"></a>
     <p>私の好きな、syudouさんの「邪魔」という曲の中から詞を引用して作りました。マイノリティな人間の中にある狂気的なものを表現したかったです。</p>
   </ol>
  </div>
